# mpv-egui

./: .gitignore  Cargo.toml  LICENSE  README.org
src/: main.rs
